--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -38,7 +38,7 @@
 
         <div class="separator"></div>
 
-        <div class="nav-icon">
+        <div class="nav-icon" (click)="openLoginDialog()">
           <span>{{ 'LOGIN' | translate }}</span>
           <mat-icon>person_outline</mat-icon>
         </div>
