--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,8 +1,9 @@
-<app-home></app-home>
+<app-header></app-header>
 
 
-<!-- <main class="page-container">
+<main>
   <router-outlet></router-outlet>
-</main> -->
+</main>
+
 
 
